setup attributes endpoint and removed trailing slash for other endpoints
