# internal/api/docs/swagger.json
@@ -8,6 +8,90 @@
         }
     },
     "paths": {
+        "/attributes": {
+            "get": {
+                "description": "\"get all product attributes\"",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Attributes"
+                ],
+                "summary": "\"get all product attributes\"",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "page data size",
+                        "name": "page_size",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "sort by",
+                        "name": "sort_by",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "order",
+                        "name": "order",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "500": {
+                        "description": "body",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.ErrorResponse"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "\"retrieve a single attribute from database\"",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Attributes"
+                ],
+                "summary": "\"get a single attribute\"",
+                "parameters": [
+                    {
+                        "description": "Create attribute payload",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/attributes.CreateAttributeRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "\t\t\t\"\"\t\t\t\t\t\t\t\t\t\"no response"
+                    },
+                    "500": {
+                        "description": "body",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/forgot-password": {
             "post": {
                 "description": "\"forgot password request\"",
@@ -300,7 +384,7 @@
                 }
             }
         },
-        "/categories/": {
+        "/categories": {
             "get": {
                 "description": "\"get all product categories\"",
                 "consumes": [
@@ -310,7 +394,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Category"
+                    "Categories"
                 ],
                 "summary": "\"get all categories\"",
                 "parameters": [
@@ -357,7 +441,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Category"
+                    "Categories"
                 ],
                 "summary": "\"product categories\"",
                 "parameters": [
@@ -394,7 +478,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Category"
+                    "Categories"
                 ],
                 "summary": "\"get a single category\"",
                 "parameters": [
@@ -436,7 +520,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Category"
+                    "Categories"
                 ],
                 "summary": "\"update a single category\"",
                 "parameters": [
@@ -481,7 +565,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Category"
+                    "Categories"
                 ],
                 "summary": "\"get a single category\"",
                 "parameters": [
@@ -509,7 +593,7 @@
                 }
             }
         },
-        "/profile/": {
+        "/profile": {
             "get": {
                 "security": [
                     {
@@ -594,7 +678,7 @@
                 }
             }
         },
-        "/subcategories/": {
+        "/subcategories": {
             "get": {
                 "description": "\"get all product subcategories\"",
                 "consumes": [
@@ -604,7 +688,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "SubCategory"
+                    "Subcategories"
                 ],
                 "summary": "\"get all subcategories\"",
                 "parameters": [
@@ -651,7 +735,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "SubCategory"
+                    "Subcategories"
                 ],
                 "summary": "\"product subcategories\"",
                 "parameters": [
@@ -691,7 +775,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "SubCategory"
+                    "Subcategories"
                 ],
                 "summary": "\"get a single subcategory\"",
                 "parameters": [
@@ -733,7 +817,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "SubCategory"
+                    "Subcategories"
                 ],
                 "summary": "\"update a single subcategory\"",
                 "parameters": [
@@ -778,7 +862,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "SubCategory"
+                    "Subcategories"
                 ],
                 "summary": "\"get a single subcategory\"",
                 "parameters": [
@@ -808,6 +892,17 @@
         }
     },
     "definitions": {
+        "attributes.CreateAttributeRequest": {
+            "type": "object",
+            "required": [
+                "name"
+            ],
+            "properties": {
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "auth.AuthResponse": {
             "type": "object",
             "properties": {
