# internal/application/attributes/dtos.go
@@ -1,0 +1,5 @@
+package attributes
+
+type CreateAttributeRequest struct {
+	Name string `json:"name" binding:"required"`
+}
